--- a/client/main.css
+++ b/client/main.css
@@ -140,3 +140,55 @@ header {
 .filter > button {
   background-color: #62807e;
 }
+
+.login-form {
+  display: flex;
+  flex-direction: column;
+  height: 50%;
+
+  justify-content: center;
+  align-items: center;
+}
+
+.login-form > div {
+  margin: 8px;
+}
+
+.login-form > div > label {
+  font-weight: bold;
+}
+
+.login-form > div > input {
+  flex-grow: 1;
+  box-sizing: border-box;
+  padding: 10px 6px;
+  background: transparent;
+  border: 1px solid #aaa;
+  width: 100%;
+  font-size: 1em;
+  margin-right: 16px;
+  margin-top: 4px;
+}
+
+.login-form > div > input:focus {
+  outline: 0;
+}
+
+.login-form > div > button {
+  background-color: #62807e;
+  padding: 0.5rem 2.5rem;
+}
+
+.user {
+  display: flex;
+
+  align-self: flex-end;
+
+  margin: 8px 16px 0;
+  font-weight: bold;
+}
+
+.user > button {
+  background-color: #62807e;
+  padding: 0.5rem 2.5rem;
+}
